--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<meta charset='utf-8'>
+<head>
+  <meta charset='utf-8'>
+  <script src='https://d3js.org/d3.v4.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js'></script>
+</head>
 <style>
 
 body {
@@ -15,71 +19,185 @@ body {
 }
 
 </style>
-<svg width='960' height='960'></svg>
-<script src='https://d3js.org/d3.v4.min.js'></script>
+
+<svg id='vis' width='960' height='960'></svg>
+
+<div style='width: 1920px; height: 1080px; background:#000; position: relative;'>
+  <img style='position: absolute' src='app.png' width='1920' height='1080' />
+  <svg style='position: absolute' id='img' width='1920' height='1080'></svg>
+</div>
+
 <script>
 
-// From http://mkweb.bcgsc.ca/circos/guide/tables/
-var matrix = [
-  [11975,  5871, 8916, 2868],
-  [ 1951, 10048, 2060, 6171],
-  [ 8010, 16145, 8090, 8045],
-  [ 1013,   990,  940, 6907]
-];
+function flattenData (data) {
+  var flat = []
 
-var svg = d3.select('svg'),
-    width = +svg.attr('width'),
-    height = +svg.attr('height'),
-    outerRadius = Math.min(width, height) * 0.5 - 40,
-    innerRadius = outerRadius - 30;
+  Object.keys(data[0]).forEach(function (key) {
+    if (key !== 'id') {
+      data[0][key].forEach(function (d) {
+        d.id = key
+        d.time = moment(d.date)
+        flat.push(d)
+      })
+    }
+  })
 
-var formatValue = d3.formatPrefix(',.0', 1e3);
+  flat.sort(function (a, b) {
+    return a.time - b.time
+  })
 
-var chord = d3.chord()
-    .padAngle(0.05)
-    .sortSubgroups(d3.descending);
-
-var arc = d3.arc()
-    .innerRadius(innerRadius)
-    .outerRadius(outerRadius);
-
-var ribbon = d3.ribbon()
-    .radius(innerRadius);
-
-var color = d3.scaleOrdinal()
-    .domain(d3.range(4))
-    .range(['#000000', '#FFDD89', '#957244', '#F26223']);
-
-var g = svg.append('g')
-    .attr('transform', 'translate(' + width / 2 + ',' + height / 2 + ')')
-    .datum(chord(matrix));
-
-var group = g.append('g')
-    .attr('class', 'groups')
-  .selectAll('g')
-  .data(function(chords) { return chords.groups; })
-  .enter().append('g');
-
-group.append('path')
-    .style('fill', function(d) { return color(d.index); })
-    .style('stroke', function(d) { return d3.rgb(color(d.index)).darker(); })
-    .attr('d', arc);
-
-g.append('g')
-    .attr('class', 'ribbons')
-  .selectAll('path')
-  .data(function(chords) { return chords; })
-  .enter().append('path')
-    .attr('d', ribbon)
-    .style('fill', function(d) { return color(d.target.index); })
-    .style('stroke', function(d) { return d3.rgb(color(d.target.index)).darker(); });
-
-// Returns an array of tick angles and values for a given group and step.
-function groupTicks(d, step) {
-  var k = (d.endAngle - d.startAngle) / d.value;
-  return d3.range(0, d.value, step).map(function(value) {
-    return {value: value, angle: value * k + d.startAngle};
-  });
+  return flat;
 }
+
+function convertDataForAOI (data) {
+  var keys = {
+    'overviewHist': 0,
+    'detailHist': 1,
+    'graph': 2,
+    'table': 3,
+    'offices': 4
+  }
+
+  var subKeys = {
+    'officesCleared': 'offices',
+    'officeMouseEnter': 'offices',
+    'officeClicked': 'offices',
+    'sliderMoved': 'offices',
+    'accessTimeClicked': 'table',
+    'histogramBrushStart': 'overviewHist',
+    'histogramBrushEnd': 'overviewHist',
+    'headerClicked': 'table',
+    'rowClicked': 'table',
+    'rowMouseOver': 'table',
+    'tableToggleSelected': 'table',
+    'pageChange': 'table',
+    'histogramBarClick': 'detailHist',
+    'histogramBarMouseEnter': 'detailHist',
+    'graphNodeMouseEnter': 'graph'
+  }
+
+  var converted = [
+    [0, 0, 0, 0, 0],
+    [0, 0, 0, 0, 0],
+    [0, 0, 0, 0, 0],
+    [0, 0, 0, 0, 0],
+    [0, 0, 0, 0, 0]
+  ];
+
+  var previousId = ''
+  var previousTime = ''
+  for (let i = 0; i < data.length; i++) {
+    if (data[i].id !== 'mouseEnter') {
+      if (previousId === '' || previousTime === '') {
+        previousId = data[i].id
+        previousTime = data[i].time
+      }
+      if (previousId !== data[i].id) {
+        fromIndex = +keys[subKeys[previousId]]
+        toIndex = +keys[subKeys[data[i].id]]
+
+        timeLapsed = data[i].time - previousTime
+
+        converted[fromIndex][toIndex] += timeLapsed
+        previousId = data[i].id
+        previousTime = data[i].time
+      }
+    }
+  }
+
+  return converted;
+}
+
+function drawChart (matrix) {
+  var svg = d3.select('#vis'),
+      width = +svg.attr('width'),
+      height = +svg.attr('height'),
+      outerRadius = Math.min(width, height) * 0.5 - 40,
+      innerRadius = outerRadius - 30;
+
+  var formatValue = d3.formatPrefix(',.0', 1e3);
+
+  var chord = d3.chord()
+      .padAngle(0.05)
+      .sortSubgroups(d3.descending);
+
+  var arc = d3.arc()
+      .innerRadius(innerRadius)
+      .outerRadius(outerRadius);
+
+  var ribbon = d3.ribbon()
+      .radius(innerRadius);
+
+  var color = d3.scaleOrdinal()
+      .domain(d3.range(5))
+      .range(['#000000', '#FFDD89', '#00CBDE', '#F26223', '#629926']);
+
+  var g = svg.append('g')
+      .attr('transform', 'translate(' + width / 2 + ',' + height / 2 + ')')
+      .datum(chord(matrix));
+
+  var group = g.append('g')
+      .attr('class', 'groups')
+    .selectAll('g')
+    .data(function(chords) { return chords.groups; })
+    .enter().append('g');
+
+  group.append('path')
+      .style('fill', function(d) { return color(d.index); })
+      .style('stroke', function(d) { return d3.rgb(color(d.index)).darker(); })
+      .attr('d', arc);
+
+  g.append('g')
+      .attr('class', 'ribbons')
+    .selectAll('path')
+    .data(function(chords) { return chords; })
+    .enter().append('path')
+      .attr('d', ribbon)
+      .style('fill', function(d) { return color(d.target.index); })
+      .style('stroke', function(d) { return d3.rgb(color(d.target.index)).darker(); });
+
+  // Returns an array of tick angles and values for a given group and step.
+  function groupTicks(d, step) {
+    var k = (d.endAngle - d.startAngle) / d.value;
+    return d3.range(0, d.value, step).map(function(value) {
+      return {value: value, angle: value * k + d.startAngle};
+    });
+  }
+}
+
+function drawPointMap (mouse, eye) {
+  var svg = d3.select('#img')
+  var eyeG = svg.append('g')
+  var mouseG = svg.append('g')
+
+  eyeG.selectAll('circle')
+    .data(eye).enter().append('circle')
+      .attr('r', 5)
+      .attr('fill', 'green')
+      .attr('fill-opacity', 0.05)
+      .attr('cx', function (d) {
+        return d.x === '-nan(ind)' ? -100 : d.x
+      })
+      .attr('cy', function (d) {
+        return d.y === '-nan(ind)' ? -100 : d.y
+      });
+
+  mouseG.selectAll('circle')
+    .data(mouse).enter().append('circle')
+      .attr('r', 5)
+      .attr('fill', 'blue')
+      .attr('fill-opacity', 0.05)
+      .attr('cx', function (d) { return d.x })
+      .attr('cy', function (d) { return d.y });
+}
+
+d3.text('CPV-A.csv', function(text) {
+  var eye = d3.csvParse('status,x,y,time\n' + text)
+  d3.json('CPV-A.json', function (mouse) {
+    let rawMouse = flattenData(mouse)
+    drawChart(convertDataForAOI(rawMouse))
+    drawPointMap(rawMouse, eye)
+  })
+})
 
 </script>
